# FRGR

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
example-scenes/kitchen/64spp/: albedo.exr  albedoVariance.exr  normal.exr  normalVariance.exr
src/: common.hpp  filter.hpp  gradient_opt.hpp  main.cpp
